--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         }
 
         .avatar {
-            width: 100px;
-            height: 100px;
+            width: 100%; /* 设置图像宽度 */
+            height: auto; /* 高度自适应 */
+            object-fit: contain; /* 保持长宽比，图像不会被裁剪 */
             border-radius: 50%;
             margin-bottom: 1rem;
         }
