Update image setting again

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         }
 
         .avatar {
-            width: 100%; /* 设置图像宽度 */
-            height: auto; /* 高度自适应 */
-            object-fit: contain; /* 保持长宽比，图像不会被裁剪 */
+            width: 100px;
+            height: 146px;
             border-radius: 50%;
             margin-bottom: 1rem;
         }
